# jp2cenzoapi

./: Cargo.toml  Dockerfile  README.md  build.sh  run.sh  todos.txt
backend/: .gitignore
backend/maybe_later/: template.rs
backend/public/: docs.html  index.html
backend/src/: error.rs  main.rs
frontend/: docs.html  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.svelte  Docs.svelte  NavBar.svelte  docs.ts
frontend/src/lib/: NavBar.svelte  NavLink.svelte
maybe_later/templates/: index.html  quotes.html
public/: docs.html  index.html
src/: error.rs  main.rs  model.rs  quote_form.rs  storage.rs
src/api/: images.rs  mod.rs  quotes.rs
templates/: index.html
