[package]
name = "jp2cenzoapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.0", features = ["postgres", "migrate", "runtime-tokio-native-tls"] }
reqwest = { version = "0.12.5", features = ["json"] }
rand = "0.8.5"

